--- a/SRPH/RoomWindow.xaml
+++ b/SRPH/RoomWindow.xaml
@@ -13,6 +13,8 @@
         <Label x:Name="lbl_Number" Content="Numer Pokoju" HorizontalAlignment="Left" Margin="26,48,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_NumberOfPerson" Content="Ilość Osób" HorizontalAlignment="Left" Margin="26,95,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_TypesOfBeds" Content="Typ łóżek" HorizontalAlignment="Left" Margin="26,139,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="211,239,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click"/>
+        <Button x:Name="btn_Save" Content="Zapisz" HorizontalAlignment="Left" Margin="107,239,0,0" VerticalAlignment="Top" Width="75" Click="btn_Save_Click"/>
 
     </Grid>
 </Window>
