--- a/SRPH/RoomWindow.xaml
+++ b/SRPH/RoomWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="RoomWindow" Height="300" Width="300">
     <Grid>
-        <TextBox x:Name="txt_Number" HorizontalAlignment="Left" Height="23" Margin="129,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txt_NumberOfPerson" HorizontalAlignment="Left" Height="23" Margin="129,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txt_TypesOfBeds" HorizontalAlignment="Left" Height="23" Margin="129,143,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="TB_Number" HorizontalAlignment="Left" Height="23" Margin="129,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="TB_NumberOfPerson" HorizontalAlignment="Left" Height="23" Margin="129,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="TB_TypesOfBeds" HorizontalAlignment="Left" Height="23" Margin="129,143,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="lbl_Number" Content="Numer Pokoju" HorizontalAlignment="Left" Margin="26,48,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_NumberOfPerson" Content="Ilość Osób" HorizontalAlignment="Left" Margin="26,95,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbl_TypesOfBeds" Content="Typ łóżek" HorizontalAlignment="Left" Margin="26,139,0,0" VerticalAlignment="Top"/>
