--- a/SRPH/MainWindow.xaml
+++ b/SRPH/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="btn_Reservation" Content="Wyświetl rezerwacje" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" Width="118"/>
+        <Button x:Name="btn_Reservation" Content="Wyświetl rezerwacje" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" Width="118" Click="btn_Reservation_Click"/>
         <Button x:Name="btn_AddRoom" Content="Dodaj Pokój" HorizontalAlignment="Left" Margin="114,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_AddRoom_Click"/>
         <Calendar HorizontalAlignment="Left" Margin="10,157,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="421,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click"/>
