--- a/SRPH/MainWindow.xaml
+++ b/SRPH/MainWindow.xaml
@@ -11,7 +11,7 @@
         <Button x:Name="btn_AddRoom" Content="Dodaj Pokój" HorizontalAlignment="Left" Margin="114,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_AddRoom_Click"/>
         <Calendar HorizontalAlignment="Left" Margin="10,157,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="421,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click"/>
-        <Button x:Name="btn_Rooms" Content="Wyswietl Pokoje" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.512,-0.584"/>
+        <Button x:Name="btn_Rooms" Content="Wyswietl Pokoje" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.512,-0.584" Click="btn_Rooms_Click"/>
         <Button x:Name="btn_Search" Content="Szukaj" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="31,10,0,0"/>
         <Button x:Name="btn_Edit" Content="Edytuj" HorizontalAlignment="Left" Margin="341,10,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="btn_AddReservation" Content="Wykonaj Rezerwacje" HorizontalAlignment="Left" Margin="204,10,0,0" VerticalAlignment="Top" Width="118" Click="btn_AddReservation_Click"/>
