--- a/SRPH/MainWindow.xaml
+++ b/SRPH/MainWindow.xaml
@@ -10,15 +10,15 @@
         <Image Source="Resources\Background.jpg" Stretch="Fill" Margin="0,0,0,0"/>
         <Button x:Name="btn_Reservation" Content="Wyświetl rezerwacje" HorizontalAlignment="Left" Margin="10,73,0,0" VerticalAlignment="Top" Width="118" Click="btn_Reservation_Click"/>
         <Button x:Name="btn_AddRoom" Content="Dodaj Pokój" HorizontalAlignment="Left" Margin="114,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_AddRoom_Click"/>
-        <Calendar HorizontalAlignment="Left" Margin="10,157,0,0" VerticalAlignment="Top"/>
+        <Calendar HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Bottom"/>
         <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="421,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click"/>
         <Button x:Name="btn_Rooms" Content="Wyswietl Pokoje" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.512,-0.584" Click="btn_Rooms_Click"/>
-        <Button x:Name="btn_Search" Content="Szukaj" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="31,10,0,0"/>
+        <Button x:Name="btn_Delete" Content="Usuń" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="31,10,0,0"/>
         <Button x:Name="btn_Edit" Content="Edytuj" HorizontalAlignment="Left" Margin="341,10,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="btn_AddReservation" Content="Wykonaj Rezerwacje" HorizontalAlignment="Left" Margin="204,10,0,0" VerticalAlignment="Top" Width="118" Click="btn_AddReservation_Click"/>
-        <Button x:Name="btn_ShowAllReservation" Content="Pokaż wszytskie rezerwacje" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="154" Click="btn_ShowAllReservation_Click"/>
-        <DataGrid x:Name="DG_ShowData" HorizontalAlignment="Left" Margin="194,63,0,0" VerticalAlignment="Top" Height="246" Width="313"/>
-        <Button x:Name="btn_ShowAllRooms" Content="Pokaż wszytskie pokoje" HorizontalAlignment="Left" Margin="10,123,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.456,2.426" Click="btn_ShowAllRooms_Click"/>
+        <Button x:Name="btn_ShowAllReservation" Content="Pokaż wszystkie rezerwacje" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="154" Click="btn_ShowAllReservation_Click"/>
+        <DataGrid x:Name="DG_ShowData" Margin="194,63,10,10"/>
+        <Button x:Name="btn_ShowAllRooms" Content="Pokaż wszystkie pokoje" HorizontalAlignment="Left" Margin="10,123,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.456,2.426" Click="btn_ShowAllRooms_Click"/>
 
     </Grid>
 </Window>
