--- a/SRPH/MainWindow.xaml
+++ b/SRPH/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Image Source="Resources\Background.jpg" Stretch="Fill" Margin="0,0,0,0"/>
+        <Image Margin="0,0,0,0" IsEnabled="False"/>
         <Button x:Name="btn_Reservation" Content="Wyświetl rezerwacje" HorizontalAlignment="Left" Margin="10,73,0,0" VerticalAlignment="Top" Width="118" Click="btn_Reservation_Click"/>
         <Button x:Name="btn_AddRoom" Content="Dodaj Pokój" HorizontalAlignment="Left" Margin="114,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_AddRoom_Click"/>
         <Calendar HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Bottom"/>
