--- a/SRPH/ReservationWindow.xaml
+++ b/SRPH/ReservationWindow.xaml
@@ -21,7 +21,7 @@
         <TextBox x:Name="TB_PhoneNumber" HorizontalAlignment="Left" Height="23" Margin="160,218,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TabIndex="6"/>
         <Button x:Name="btn_Close" Content="Zamknij" Margin="0,0,10,15" Click="btn_Close_Click" TabIndex="8" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75"/>
         <Button x:Name="btn_Save" Content="Zapisz" Margin="0,0,114,15" Click="btn_Save_Click" TabIndex="7" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75"/>
-        <Label x:Name="lbl_Rooms" Content="Typ pokoju" HorizontalAlignment="Left" Margin="57,82,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_Rooms" Content="Typ pokoju | Nr. " HorizontalAlignment="Left" Margin="57,82,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="CB_FreeRooms" HorizontalAlignment="Left" Margin="160,85,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CB_FreeRooms_SelectionChanged"/>
         <TextBox x:Name="TB_RoomNumber" HorizontalAlignment="Left" Height="23" Margin="294,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="57" TabIndex="3" IsEnabled="False"/>
 
