--- a/SRPH/ReservationWindow.xaml
+++ b/SRPH/ReservationWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="ReservationWindow" Height="351.15" Width="369.244">
     <Grid Initialized="Grid_Initialized">
-        <Label x:Name="lbl_Date" Content="Data Od&#xD;&#xA;&#xD;&#xA;        Do" HorizontalAlignment="Left" Margin="63,13,0,0" VerticalAlignment="Top" Height="60"/>
+        <Image IsEnabled="False" Source="Images/background2.jpg" Stretch="Fill" Margin="0,0,0,1"/>
+        <Label x:Name="lbl_Date" Content="Data Od&#xA;&#xA;        Do" HorizontalAlignment="Left" Margin="63,13,0,0" VerticalAlignment="Top" Height="60"/>
         <TextBox x:Name="TB_Name" HorizontalAlignment="Left" Height="23" Margin="160,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TabIndex="3"/>
         <Label x:Name="lbl_Name" Content="Imię" HorizontalAlignment="Left" Margin="56,120,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="TB_SurName" HorizontalAlignment="Left" Height="23" Margin="160,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TabIndex="4"/>
