--- a/SRPH/MainWindow.xaml
+++ b/SRPH/MainWindow.xaml
@@ -8,15 +8,16 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Image IsEnabled="False" Source="Images/background.jpg" Stretch="Fill"/>
-        <Button x:Name="btn_AddRoom" Content="Dodaj Pokój" HorizontalAlignment="Left" Margin="114,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_AddRoom_Click"/>
+        <Button x:Name="btn_AddRoom" Content="Dodaj Pokój" HorizontalAlignment="Left" Margin="114,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_AddRoom_Click" Opacity="0.8"/>
         <Calendar HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Bottom"/>
-        <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="340,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click"/>
-        <Button x:Name="btn_Delete" Content="Usuń" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="31,10,0,0"/>
-        <Button x:Name="btn_AddReservation" Content="Wykonaj Rezerwacje" HorizontalAlignment="Left" Margin="204,10,0,0" VerticalAlignment="Top" Width="118" Click="btn_AddReservation_Click"/>
-        <Button x:Name="btn_ShowAllReservation" Content="Pokaż wszystkie rezerwacje" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="154" Click="btn_ShowAllReservation_Click"/>
-        <DataGrid x:Name="DG_ShowData" Margin="194,63,10,10" MouseDoubleClick="DG_ShowData_MouseDoubleClick"/>
-        <Button x:Name="btn_ShowAllRooms" Content="Pokaż wszystkie pokoje" HorizontalAlignment="Left" Margin="10,73,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.456,2.426" Click="btn_ShowAllRooms_Click" Height="18"/>
+        <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="340,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click" Opacity="0.8" Background="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
+        <Button x:Name="btn_Delete" Content="Usuń" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="31,10,0,0" Opacity="0.8"/>
+        <Button x:Name="btn_AddReservation" Content="Wykonaj Rezerwacje" HorizontalAlignment="Left" Margin="204,10,0,0" VerticalAlignment="Top" Width="118" Click="btn_AddReservation_Click" Opacity="0.8"/>
+        <Button x:Name="btn_ShowAllReservation" Content="Pokaż wszystkie rezerwacje" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="154" Click="btn_ShowAllReservation_Click" Opacity="0.8"/>
+        <DataGrid x:Name="DG_ShowData" Margin="194,63,10,10" MouseDoubleClick="DG_ShowData_MouseDoubleClick" Opacity="0.7"/>
+        <Button x:Name="btn_ShowAllRooms" Content="Pokaż wszystkie pokoje" HorizontalAlignment="Left" Margin="10,73,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.456,2.426" Click="btn_ShowAllRooms_Click" Height="18" Opacity="0.8"/>
         <Image x:Name="image" HorizontalAlignment="Left" Height="26" Margin="10,96,0,0" VerticalAlignment="Top" Width="29" MouseLeftButtonUp="image_MouseLeftButtonUp" Source="Images/icon.png" AutomationProperties.Name="Test Hint"/>
+        <Button x:Name="btn_Settings" Content="Ustawienia" HorizontalAlignment="Left" Margin="433,10,0,0" VerticalAlignment="Top" Width="75" Click="btn_Settings_Click" Opacity="0.8"/>
 
     </Grid>
 </Window>
