--- a/SRPH/ReservationWindow.xaml
+++ b/SRPH/ReservationWindow.xaml
@@ -18,7 +18,7 @@
         <Label x:Name="lbl_PhoneNumber" Content="Numer Telefonu" HorizontalAlignment="Left" Margin="57,215,0,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="DP_DateFrom" HorizontalAlignment="Left" Margin="160,13,0,0" VerticalAlignment="Top" TabIndex="1" AutomationProperties.HelpText="hh" Text="txt"/>
         <DatePicker x:Name="DP_DateTo" HorizontalAlignment="Left" Margin="160,49,0,0" VerticalAlignment="Top" TabIndex="2"/>
-        <Label x:Name="lbl_Standart" Content="Standard" HorizontalAlignment="Left" Margin="56,243,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbl_Standart" Content="Standard" HorizontalAlignment="Left" Margin="57,249,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="TB_PhoneNumber" HorizontalAlignment="Left" Height="23" Margin="160,218,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TabIndex="6"/>
         <Button x:Name="btn_Close" Content="Zamknij" Margin="0,0,10,15" Click="btn_Close_Click" TabIndex="8" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75"/>
         <Button x:Name="btn_Save" Content="Zapisz" Margin="0,0,114,15" Click="btn_Save_Click" TabIndex="7" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75"/>
@@ -26,6 +26,7 @@
         <ComboBox x:Name="CB_FreeRooms" HorizontalAlignment="Left" Margin="160,85,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CB_FreeRooms_SelectionChanged"/>
         <TextBox x:Name="TB_RoomNumber" HorizontalAlignment="Left" Height="23" Margin="294,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="57" TabIndex="3" IsEnabled="False"/>
         <Button x:Name="btn_Delete" Content="Usuń" Margin="0,0,207,15" Click="btn_Delete_Click" TabIndex="7" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75"/>
+        <Button x:Name="btn_Standard" Content="Dodaj standardy" HorizontalAlignment="Left" Margin="160,255,0,0" VerticalAlignment="Top" Width="120" Click="btn_Standard_Click"/>
 
     </Grid>
 </Window>
