--- a/SRPH/RoomWindow.xaml
+++ b/SRPH/RoomWindow.xaml
@@ -18,6 +18,8 @@
         <Button x:Name="btn_Close" Content="Zamknij" HorizontalAlignment="Left" Margin="211,239,0,0" VerticalAlignment="Top" Width="75" Click="btn_Close_Click"/>
         <Button x:Name="btn_Save" Content="Zapisz" HorizontalAlignment="Left" Margin="110,239,0,0" VerticalAlignment="Top" Width="75" Click="btn_Save_Click"/>
         <Button x:Name="btn_Delete" Content="Usuń" HorizontalAlignment="Left" Margin="10,239,0,0" VerticalAlignment="Top" Width="75" Click="btn_Delete_Click"/>
+        <Label x:Name="lbl_Standart" Content="Standard" HorizontalAlignment="Left" Margin="26,188,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_Standard" Content="Dodaj standardy" HorizontalAlignment="Left" Margin="129,194,0,0" VerticalAlignment="Top" Width="120" Click="btn_Standard_Click"/>
 
     </Grid>
 </Window>
